--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "bin": {
+    "wgit": "dest/index.js"
+  },
   "scripts": {
     "start": "babel-node lib/index.js",
+    "babel": "babel lib -d dest",
+    "lint": "eslint lib test",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
@@ -18,6 +23,7 @@
   },
   "dependencies": {
     "babel-core": "^6.25.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-node6": "^11.0.0",
     "chalk": "^1.1.3",
     "execa": "^0.6.1",
@@ -29,6 +35,7 @@
     "lodash.merge": "^4.6.0",
     "object.entries": "^1.0.4",
     "standard": "^10.0.3",
+    "strip-ansi": "^4.0.0",
     "update-notifier": "^2.1.0",
     "yargs": "^7.0.2"
   },
