--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "babel-node lib/index.js",
     "babel": "babel lib -d dest",
     "lint": "eslint lib test",
+    "prepublish": "npm run babel",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
@@ -24,6 +25,8 @@
   "dependencies": {
     "babel-core": "^6.25.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-node6": "^11.0.0",
     "chalk": "^1.1.3",
     "execa": "^0.6.1",
